src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CoAccess__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Read/write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Code__c</fullName>
        <label>Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Co_Fax_Number__c</fullName>
        <label>Fax Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Id_Number__c</fullName>
        <label>Id Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_List_Of_Products__c</fullName>
        <label>List Of Products</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Physical_Address__c</fullName>
        <label>Physical_Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cu_Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cu_Add_Line_1__c</fullName>
        <label>Add Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cu_Addressing_Title__c</fullName>
        <label>Addressing Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cu_Anniversary_Date__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cu_Client_Number__c</fullName>
        <displayFormat>c-{0000}</displayFormat>
        <label>Client Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Cu_Contact_Alternative_Email_address__c</fullName>
        <label>Contact Alternative Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cu_Contact_Correspondence_Email_Address__c</fullName>
        <label>Contact_Correspondence_Email_Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cu_Contact_Fax_Home__c</fullName>
        <label>Contact Fax Home</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cu_Contact_Fax__c</fullName>
        <label>Contact Fax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cu_Correspondence_Language__c</fullName>
        <label>Correspondence Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>African</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ki_BR_Number__c</fullName>
        <label>BR Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ki_Catagory__c</fullName>
        <label>Catagory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ki_Contact_Person_for_the_FSB__c</fullName>
        <label>Contact Person for the FSB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Person 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ki_Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ki_Employement_Status__c</fullName>
        <label>Employement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ki_HC_License_Expiry_Renewal_Date__c</fullName>
        <label>HC License Expiry/ Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ki_ID_Number__c</fullName>
        <label>ID Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ki_Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pm_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pm_Code__c</fullName>
        <label>Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pm_Conatct_Fax_Work__c</fullName>
        <label>Conatct Fax Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pm_Contact_Alt_Email__c</fullName>
        <label>Contact Alt Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pm_Contact_Fax_Home__c</fullName>
        <label>Contact Fax Home</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pm_Contact_Mobile_Alternate__c</fullName>
        <label>Contact Mobile Alternate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pm_Contact_Telephone_Work__c</fullName>
        <label>Contact Telephone Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pm_Contact_Telephone_home__c</fullName>
        <label>Contact Telephone home</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pm_Suburb__c</fullName>
        <label>Suburb</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QR__c</fullName>
        <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl=MECARD:N:&apos;+FirstName +&apos; &apos;+ LastName +&apos;;&apos;+ Co_Address__c +&apos;;&apos;+ Phone+&apos;;&apos;, &apos;Scan the QR code to create contact in your mobile&apos;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pm_Contact_Mobile_Own__c</fullName>
        <label>Contact Mobile Own</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>val__c</fullName>
        <label>val</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>